--- a/viewLogTest/viewLogTest/pom.xml
+++ b/viewLogTest/viewLogTest/pom.xml
@@ -5,7 +5,13 @@
   <version>0.0.1-SNAPSHOT</version>
   <build>
     <sourceDirectory>src</sourceDirectory>
+    <testSourceDirectory>src/test/java/com/mullen/viewlogtest</testSourceDirectory>
     <plugins>
+      <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M3</version>
+        </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
@@ -26,5 +32,10 @@
         <artifactId>junit-jupiter-api</artifactId>
         <version>5.4.2</version>
     </dependency>
-    </dependencies>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>5.4.2</version>
+    </dependency>
+</dependencies>
 </project>
